--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,14 @@
 version: "3"
 
 services:
-  {{package}}:
+  olintut:
     build: .
     tty: true
     entrypoint: ["bash"]
     volumes:
-      - .:/{{package}}
+      - .:/olintut
+  redis:
+    image: redis:5.0.3
+
+  rabbitmq:
+    image: rabbitmq:3.7.11
